--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -28,19 +28,19 @@ spec:
         ports:
         - containerPort: 8083
         env:
-          - name: BOOTSTRAP_SERVERS
+          - name: CONNECT_BOOTSTRAP_SERVERS
             value: http://broker:9092
-          - name: GROUP_ID
+          - name: CONNECT_GROUP_ID
             value: connector-elastic
-          - name: CONFIG_STORAGE_TOPIC
+          - name: CONNECT_CONFIG_STORAGE_TOPIC
             value: connect-configs-logger
-          - name: OFFSET_STORAGE_TOPIC
+          - name: CONNECT_OFFSET_STORAGE_TOPIC
             value: connect-offsets-logger
-          - name: STATUS_STORAGE_TOPIC
+          - name: CONNECT_STATUS_STORAGE_TOPIC
             value: connect-status-logger
-          - name: KEY_CONVERTER
+          - name: CONNECT_KEY_CONVERTER
             value: io.confluent.connect.avro.AvroConverter
-          - name: VALUE_CONVERTER
+          - name: CONNECT_VALUE_CONVERTER
             value: io.confluent.connect.avro.AvroConverter
 
           - name: CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL
@@ -48,25 +48,25 @@ spec:
           - name: CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL
             value: http://schema-registry:8081
 
-          - name: INTERNAL_KEY_CONVERTER
+          - name: CONNECT_INTERNAL_KEY_CONVERTER
             value: org.apache.kafka.connect.json.JsonConverter
-          - name: INTERNAL_VALUE_CONVERTER
+          - name: CONNECT_INTERNAL_VALUE_CONVERTER
             value: org.apache.kafka.connect.json.JsonConverter
-          - name: REST_ADVERTISED_HOST_NAME
+          - name: CONNECT_REST_ADVERTISED_HOST_NAME
             value: "kafka-connect"
-          - name: LOG4J_ROOT_LOGLEVEL
+          - name: CONNECT_LOG4J_ROOT_LOGLEVEL
             value: INFO
-          - name: LOG4J_LOGGERS
+          - name: CONNECT_LOG4J_LOGGERS
             value: "org.apache.kafka.connect.runtime.rest=WARN,org.reflections=ERROR,io.debezium=INFO,org.skynyrd=DEBUG"
           - name: KAFKA_HEAP_OPTS
             value: "-Xms500M -Xmx800M"
-          - name: CONFIG_STORAGE_REPLICATION_FACTOR
+          - name: CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR
             value: "1"
-          - name: OFFSET_STORAGE_REPLICATION_FACTOR
+          - name: CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR
             value: "1"
-          - name: STATUS_STORAGE_REPLICATION_FACTOR
+          - name: CONNECT_STATUS_STORAGE_REPLICATION_FACTOR
             value: "1"
-          - name: PLUGIN_PATH
+          - name: CONNECT_PLUGIN_PATH
             value: /etc/kafka-connect/plugins
           - name: ES_URL
             value: http://stores-es:9200
